--- a/templates/error.html
+++ b/templates/error.html
@@ -5,9 +5,10 @@
 {% block body %}
 
 <div class="article">
-  <h1  class="eror">Ошибочка вышла № {{ error.code }}</h1>
-  <div class="body">{% raw error.message %}</div>
+  <h1  class="eror">Ошибочка вышла № {{ parameters.error.code }}</h1>
+  <div class="body">{% raw parameters.error.message %}</div>
 </div>
 {% end %}
 
 <!-- / error.html -->
+
