--- a/templates/rest/all_author_list.html
+++ b/templates/rest/all_author_list.html
@@ -18,7 +18,7 @@
 			 <tr>
 			 
 			 	 <td>{{locale.format_date(author.author_create, full_format=True, shorter=True) }}</td>
-			     <td><a href="/group_desk_top/{{author.author_id }}">{{author.author_name}} {{author.author_surname}}</a></td>
+			     <td><a href="/profile/{{author.author_id }}">{{author.author_name}} {{author.author_surname}}</a></td>
 			     <td><span class="label label-sm label-success">Approved</span></td>
 			     <td><span class="label label-sm label-success">Approved</span></td>
 			 </tr>
