--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
 		{% end %}
          <div class="form-group">
              <label for="inputName" class="col-md-3 control-label">
-                 {{_("login/e-mai")}}l</label>
+                 {{_("login/e-mail")}}l</label>
              <div class="col-md-9">
                  <div class="input-icon right">
                      <i class="fa fa-user"></i>
