--- a/templates/group_dt.html
+++ b/templates/group_dt.html
@@ -83,7 +83,7 @@
 			</div>
               <div class="panel-body" id='groups_list_table'>
 
-				{% include "rest/articles_list.html" %} 
+				{% include "rest/articles_list_group.html" %} 
 
               </div>
           </div>
