--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -74,7 +74,7 @@
                                     <li class="active"><a href="#tab-edit" data-toggle="tab">{{_("Edit Profile")}}</a></li>
                                 </ul>
                                 <div id="generalTabContent" class="tab-content">
-		{% if error %}
+		{% if parameters.error %}
 		<span style="color: red">{{_("Error")}}: {{ parameters.error }}</span><p>
 		{% end %}
                                 
