--- a/templates/personal_dt.html
+++ b/templates/personal_dt.html
@@ -22,7 +22,7 @@
     	<div class="col-lg-12">
               <div class="row">
           <div class="panel panel-yellow">
-              <div class="panel-heading">Список моих статей &nbsp;&nbsp;&nbsp; 
+              <div class="panel-heading">{{_("Articles list")}} &nbsp;&nbsp;&nbsp; 
               <span class="badge badge-blue"><a style="color: #ffffff;" href="/compose">{{ _("Create new wiki") }}</a></span>
               			</div>
               <div class="panel-body" id='articles_list_table'>
@@ -32,7 +32,7 @@
               </div>
           </div>
           <div class="panel panel-green">
-              <div class="panel-heading">Список Всех групп</div>
+              <div class="panel-heading">{{_("Groups list")}}</div>
               <div class="panel-body" id="all_group_list">
               
               {% include "rest/all_group_list.html" %} 
@@ -47,7 +47,7 @@
 
               </div>
           </div>
-  </div>
+ 			</div>
               
               
   </div>
