--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
     <div>
     {% block head %}{% end %}
 
+
         <!--BEGIN BACK TO TOP-->
         <a id="totop" href="#"><i class="fa fa-angle-up"></i></a>
         <!--END BACK TO TOP-->
@@ -117,6 +118,7 @@
     </div>
     {% block bottom %}{% end %}
     
+    application/javascript
     <script src="/static/script/jquery-1.10.2.min.js"></script>
     <script src="/static/script/jquery-migrate-1.2.1.min.js"></script>
     <script src="/static/script/jquery-ui.js"></script>
@@ -153,7 +155,7 @@
     <script src="/static/script/charts-highchart-pie.js"></script>
     <script src="/static/script/charts-highchart-more.js"></script>
     <!--CORE JAVASCRIPT-->
-    <script src="/static/script/main.js"></script>
+    <script type="text/javascript" src="/static/script/main.js"></script>
     <script>        (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function () {
