--- a/templates/any_profile.html
+++ b/templates/any_profile.html
@@ -1,46 +1,40 @@
 {% extends "base.html" %}
 
 {% block body %}
-<form action="/profile" method="POST"> 
+
    {% module xsrf_form_html() %}
  
-                  <!--BEGIN CONTENT-->
-                <div class="page-content">
-                    <div id="tab-general">
-                        <div class="row mbl">
-                            <div class="col-lg-12">
-                                
-                                            <div class="col-md-12">
-                                                <div id="area-chart-spline" style="width: 100%; height: 300px; display: none;">
-                                                </div>
-                                            </div>
-                                
-                            </div>
+      <!--BEGIN CONTENT-->
+    <div class="page-content">
+        <div id="tab-general">
+            <div class="row mbl">
+                <div class="col-lg-12">
+					<div class="col-md-12">
+					    <div id="area-chart-spline" style="width: 100%; height: 300px; display: none;"></div>
+					</div>
+           		</div>
+				<div class="col-lg-12">
+				<div class="row">
+					<div class="col-md-12">
 
-                            <div class="col-lg-12">
-                              
-                                    
-                              <div class="row">
-                    <div class="col-md-12"><h2>{{_("Profile")}}: {{ parameters.page_name }}</h2>
-
-                        <div class="row mtl">
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <div class="text-center mbl"><img src="http://lorempixel.com/640/480/business/1/" alt="" class="img-responsive"/></div>
-                                </div>
-                                <table class="table table-striped table-hover">
-                                    <tbody>
-                                    <tr>
-                                        <td>{{_("Autor Name")}}</td>
-                                        <td>{{parameters.autor.author_name}} {{parameters.autor.author_surname}}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>{{_("Member Since")}}</td>
-                                        <td> {{ locale.format_date(parameters.autor.author_create, full_format=True, shorter=True) }}</td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                                
+					    <div class="row mtl">
+					        <div class="col-md-3">
+					            <div class="form-group">
+					                <div class="text-center mbl"><img src="http://lorempixel.com/640/480/business/1/" alt="" class="img-responsive"/></div>
+					            </div>
+					            <table class="table table-striped table-hover">
+					                <tbody>
+					                <tr>
+					                    <td>{{_("Autor Name")}}</td>
+					                    <td>{{parameters.autor.author_name}} {{parameters.autor.author_surname}}</td>
+					                </tr>
+					                <tr>
+					                    <td>{{_("Member Since")}}</td>
+					                    <td> {{ locale.format_date(parameters.autor.author_create, full_format=True, shorter=True) }}</td>
+					                </tr>
+					                </tbody>
+					            </table>
+					                        
 								<div class="common-modal modal fade" id="common-Modal1" tabindex="-1" role="dialog" aria-hidden="true">
 									<div class="modal-content">
 										<ul class="list-inline item-details">
@@ -49,61 +43,39 @@
 										</ul>
 									</div>
 								</div>
-                            </div>
-                            <div class="col-md-9">
-                                <div id="generalTabContent" class="tab-content">
-                                
-                                    <div id="tab-edit" class="tab-pane fade in active">
-
-                                            <h3></h3>
-
-                                    вот тут будет список статей (articles)  
-                                    и группе
-                                     
-                                            <hr/>
-
-                                            
-                                            <h3></h3>
-
-              <div class="row">
-          <div class="panel panel-yellow">
-              <div class="panel-heading">{{_("Articles list")}} &nbsp;&nbsp;&nbsp; 
-              <span class="badge badge-blue"><a style="color: #ffffff;" href="/compose">{{ _("Create new wiki") }}</a></span>
-              			</div>
-              <div class="panel-body" id='articles_list_table'>
-              
-              {% include "rest/articles_list.html" %} 
-              
-              </div>
-          </div>
-          <div class="panel panel-green">
-              <div class="panel-heading">{{_("Groups list")}}</div>
-              <div class="panel-body" id="all_group_list">
-              
-              {% include "rest/all_group_list.html" %} 
-
-              </div>
-          </div>
- 			</div>
-
-
-                                            <hr/>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                              
-                                </div>
-                                
-                            
-                     
-                            
-                        </div>
-                    </div>
-                </div>
-                <!--END CONTENT-->
-  
-</form>
+							</div>
+							<div class="col-md-9">
+							    <div id="generalTabContent" class="tab-content">
+							        <div id="tab-edit" class="tab-pane fade in active">
+						              <div class="row">
+										<div class="panel panel-yellow">
+										    <div class="panel-heading">{{_("Articles list")}} &nbsp;&nbsp;&nbsp; 
+										    	<span class="badge badge-blue"></span>
+										    </div>
+										    <div class="panel-body" id='articles_list_table'>
+										    
+										    {% include "rest/articles_list.html" %} 
+										    
+										    </div>
+										</div>
+										<div class="panel panel-green">
+										    <div class="panel-heading">{{_("Groups list")}}</div>
+										    <div class="panel-body" id="all_group_list">
+										    
+										    {% include "rest/all_group_list.html" %} 
+										
+										    </div>
+										</div>
+						 				</div>
+									</div>
+					    		</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+   		</div>
+ 	</div>
+</div>
+<!--END CONTENT-->
 {% end %}
