--- a/templates/revisionses_dt.html
+++ b/templates/revisionses_dt.html
@@ -26,24 +26,24 @@ function b64_to_utf8( str ) {
 	  return decodeURIComponent(escape(window.atob( str )));
 	}
 
-function sourseViewerShow(title, link, source){
+function sourseViewerShow(title, link, hash, source){
 	if($('#source_viewer').css('visibility') == 'hidden'){
 		 $('#source_viewer').removeClass("hidden");
 		 $('#source_viewer').addClass("visi");
 		 
         $('#source').css('height', '180px');
-       
-        $('#titleView').html(title);
-        $('#editLink').html(' <a style="color: #ffffff;" href="/compose/'+ link +'">{{ _("Edit this wiki") }}</a> ');
-        $('#source').html(b64_to_utf8(source));
         
-    } else {
-		 $('#source_viewer').removeClass("visi");
-		 $('#source_viewer').addClass("hidden");
-//        $('#source').css('height', '10px');
-    }
-    
+    } 
+
+    $('#titleView').html(title);
+    $('#editLink').html(' <a style="color: #ffffff;" href="/compose/'+ link +'?hash='+hash +'">{{ _("Edit this wiki") }}</a> ');
+    $('#source').html(b64_to_utf8(source));
 };
+
+function sourseViewerClose(){
+	 $('#source_viewer').removeClass("visi");
+	 $('#source_viewer').addClass("hidden");
+}
 
 //-->
 </script>
@@ -62,7 +62,9 @@ function sourseViewerShow(title, link, source){
 					    <div class="panel-heading">
 					         <span  id="titleView">Title></span>
 					        &nbsp;&nbsp;&nbsp; 
-              <span class="badge badge-blue" id="editLink"><a style="color: #ffffff;" href="/compose">{{ _("Create new wiki") }}</a></span></div>
+              <span class="badge badge-blue" id="editLink"><a style="color: #ffffff;" href="/compose">{{ _("Create new wiki") }}</a></span>
+              <span class="badge badge-blue pull-right" ><a style="color: #ffffff;" href="#"onclick="sourseViewerClose()">X</a></span>
+              			</div>
 					    <div class="panel-body pan">
 					        <div class="form-body pal" id='source'>
 					        
@@ -84,7 +86,7 @@ function sourseViewerShow(title, link, source){
               <div class="row">
           <div class="panel panel-grey">
 			<div class="panel-heading">{{ _("Revisions wiki") }} &nbsp;&nbsp;&nbsp; 
- 					{{ _("Revision") }}: {{ parameters.article_title if parameters.article_title else "" }}
+ 					"{{ parameters.article_title if parameters.article_title else "" }}" &nbsp;&nbsp;&nbsp; 
  					{{ _("Autor wiki") }}: {{ parameters.article_autor if parameters.article_autor else "" }}
  					<!-- перейти на страницу профиля автора article_autor_id -->
 			
@@ -109,12 +111,13 @@ function sourseViewerShow(title, link, source){
                                     
   {% for revision in parameters.revisions %}
 			
-			 <tr>
+			
+			 <tr {% if revision.revision_actual_flag == 'A'  %} class="success" {% end %} >
 			     <td><a href="/{{ revision.article_link }}">{{revision.revision_date.strftime("%d.%m.%Y")}}</a></td>
 			     <td><a href="/{{ revision.article_link }}">{{ revision.rev_article_title }}</a></td>
 			     <td><a href="/{{ revision.article_link }}">{{ revision.article_annotation }}</a></td>
-			     <td> <span class="badge badge-blue"><a style="color: #ffffff;" href="/compose/{{ revision.revisions_sha_hash }}">{{ _("Edit this wiki") }}</a></span></td>
-			     <td> <span class="badge badge-orange"><a style="color: #ffffff;" href="#" onclick="sourseViewerShow('{{ revision.rev_article_title }}', '{{ revision.revisions_sha_hash }}', '{{revision.article_source}}')">{{ _("Edit this wiki") }}</a></span></td>
+			     <td> <span class="badge badge-blue"><a style="color: #ffffff;" href="/compose/{{ revision.article_link }}?hash={{ revision.revisions_sha_hash }}">{{ _("Edit this wiki") }}</a></span></td>
+			     <td> <span class="badge badge-orange"><a style="color: #ffffff;" href="#" onclick="sourseViewerShow('{{ revision.rev_article_title }}', '{{ revision.article_link }}', '{{ revision.revisions_sha_hash }}', '{{revision.article_source}}')">{{ _("Edit this wiki") }}</a></span></td>
 			     <td><a href="/profile/{{ revision.author_id }}">{{ revision.author_name }} {{ revision.author_surname }}</a></td>
 			     <td><a href="/profile/{{ revision.revision_author_id }}">{{ revision.revision_author_name }} {{ revision.revision_author_surname }}</a></td>
 			 </tr>
@@ -140,12 +143,18 @@ function sourseViewerShow(title, link, source){
 <br>              
 <br>              
 <br>              
+<br>              
+<br>              
               
               
           </div>
       </div>
   </div>
   <!--END CONTENT-->
+
+<br>              
+<br>              
+<br>              
 
 {% end %}
 
